// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direct nested instance property getter 1`] = `
Object {
  "args": Array [
    "profile.display_name (direct)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model method applyByPath 1`] = `
Object {
  "args": Array [
    "getClass",
    [Function],
  ],
}
`;

exports[`direct nested model method call 1`] = `
Object {
  "args": Array [
    "getClass",
    [Function],
  ],
}
`;

exports[`direct nested model property setByPath 1`] = `
Object {
  "args": Array [
    "profile.display_name: (before)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model property setByPath 2`] = `
Object {
  "args": Array [
    "profile.display_name: (change)",
    "newVal_newName",
    "newVal_newName",
  ],
}
`;

exports[`direct nested model property setByPath 3`] = `
Object {
  "args": Array [
    "profile.display_name: (after)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model property setter 1`] = `
Object {
  "args": Array [
    "profile.display_name: (before)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model property setter 2`] = `
Object {
  "args": Array [
    "profile.display_name: (change)",
    "newVal_newName",
    "newVal_newName",
  ],
}
`;

exports[`direct nested model property setter 3`] = `
Object {
  "args": Array [
    "profile.display_name: (after)",
    "new_displayName",
  ],
}
`;

exports[`indirect nested model property getter 1`] = `
Object {
  "args": Array [
    "profile",
    AdvisorProfileModel {},
  ],
}
`;

exports[`indirect nested model property getter 2`] = `
Object {
  "args": Array [
    "profile.display_name (indirect)",
    "new_displayName",
  ],
}
`;
